    (gannotate, that is, and does not exit when it (gdiff) is closed.

  * Clarify 'visualise' help about the multiple branches feature
    and the --revision parameter. (Vincent Ladeuil, #556347)

  * Mark as compatible with bzr 2.3. (Jelmer Vernooij)

  * Fix appindicator icon category. (Michael Terry, #685634)

  * Mark as compatible with Bazaar 2.4. (Jelmer Vernooij)

 FEATURES
 
  * Add lock dialog. (Daniel Schierbeck, #93652)

0.99.1	2010-08-26

 BUG FIXES

  * Trivial release to include credits pickle file.

   * Mark as compatible with Bazaar 2.3. (Vincent Ladeuil)

0.99.0 2010-08-13

 BUG FIXES

   * Guard setup() call when not loaded as __main__. (Robert Collins)

   * Ignore gnomekeyring.IOError when checking if credentials are available
     in the GNOME keyring. (Jelmer Vernooij, #534326)

   * Don't crash when there is already a lan-notify instance running.
     (Jelmer Vernooij, #339284)

   * Return the credentials if successfully found in gnome-keyring.
     (John Szakmeister)

   * Support non-bzr patches. (Toshio Kuratomi, #502076)

   * Avoid using private functions to get branch config. (Jelmer Vernooij,
     #583554)

   * Mark as compatible with Bazaar 2.2. (Martin Pool, #597379)

FEATURES

  * Add 'Find' button to start text search.
    (Martin Pool, #556347)

  * Add 'glog' as an alias for visualize (aka viz) as too many
    people are still confused.
    (Vincent Ladeuil)

  * Add support for Indicator Application (Sense Hofstede, Jelmer Vernooij,
    #518179)

  * Add more tooltips to Olive. (Adrian Room, #333876)

0.98.0 2010-02-24

BUG FIXES

  * Fix relative import in olive menu.
    (Mathias Brodala, #269883)

  * Fix typo in checkout dialog.
    (Jasper Groenewegen, #466507)

  * Adds help for ginit and gtags.
    (Andrew Starr-Bochicchio, #512701)

0.97.0 2009-08-25

BUG FIXES

  * Avoid GnomeKeyringCredentialStore traceback on Ubuntu Hardy
    by being more tolerant about gobject methods availability.
    (Vincent Ladeuil, #403430)