@@ -14,6 +14,8 @@
 
   * Mark as compatible with Bazaar 2.4. (Jelmer Vernooij)
 
+  * "bzr viz" now shows authors instead of committers. (Jelmer Vernooij, #693949)
+
  FEATURES
  
   * Add lock dialog. (Daniel Schierbeck, #93652)
